@@ -1588,6 +1588,7 @@ SPVM_OP* SPVM_OP_build_package(SPVM_COMPILER* compiler, SPVM_OP* op_package, SPV
   
   package->module_file = compiler->cur_file;
   package->module_rel_file = compiler->cur_rel_file;
+
   
   int32_t is_anon;
   if (op_type) {
@@ -1625,14 +1626,10 @@ SPVM_OP* SPVM_OP_build_package(SPVM_COMPILER* compiler, SPVM_OP* op_package, SPV
     
     SPVM_OP* op_name_package = SPVM_OP_new_op_name(compiler, name_package, op_package->file, op_package->line);
     op_type = SPVM_OP_build_basic_type(compiler, op_name_package);
-    
-    // Add added package names in this compile
-    SPVM_LIST_push(compiler->tmp_added_package_names, (void*)name_package);
   }
   
-  package->op_type = op_type;
-  
   const char* package_name = op_type->uv.type->basic_type->name;
+  package->op_type = op_type;
   
   // Add addede package names in this compile
   SPVM_LIST_push(compiler->tmp_added_package_names, (void*)package_name);
